Finish debian files

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-drivnal (0.1.6-1) unstable; urgency=low
+drivnal (0.1.7-0ubuntu1) raring; urgency=low
 
   * Initial release
 
- -- Ubuntu <zach.huff.386@gmail.com>  Thu, 15 Aug 2013 18:40:15 -0400
+ -- Zachary Huff <zach.huff.386@gmail.com>  Thu, 15 Aug 2013 18:40:15 -0400
