--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-drivnal (0.1.8-0ubuntu1) unstable; urgency=low
+drivnal (0.1.9-0ubuntu1) unstable; urgency=low
 
-  * Initial release
+  * Alpha release for testing only
 
- -- Zachary Huff <zach.huff.386@gmail.com>  Fri, 16 Aug 2013 18:40:15 -0400
+ -- Zachary Huff <zach.huff.386@gmail.com>  Sat, 17 Aug 2013 18:40:15 -0400
